<?xml version="1.0"?>
<package format="2">
  <name>state_viewer</name>
  <version>0.0.0</version>
  <description>The state_viewer package</description>

  <maintainer email="yuma.nihei@tier4.jp">yn</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>rviz</depend>
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
  </export>
</package>
